force-app/main/default/objects/Opps_Related_to_Clinical_Program__c/Opps_Related_to_Clinical_Program__c.object-meta.xml
<CustomObject>
    <description>This is a junction object between the Opportunity Record Type of Clinical Program to Opportunities of other record types that are related to the Clinical Program.</description>
    <label>Opps Related to Clinical Program</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>Opps Related to Clinical Programs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opps Related to Clinical Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>