force-app/main/default/objects/Opps_Related_to_Clinical_Program__c/fields/Clinical_Program__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Program__c</fullName>
    <label>Clinical Program</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Opportunties_Related_to_Programs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>