force-app/main/default/objects/Opps_Related_to_Clinical_Program__c/fields/Clinical_Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Program_Type__c</fullName>
    <description>Used for reporting</description>
    <formula>TEXT( Clinical_Program__r.Program_Type__c)</formula>
    <label>Clinical Program Type</label>
    <type>Text</type>
</CustomField>