force-app/main/default/objects/Opps_Related_to_Clinical_Program__c/fields/Count_Related_Won__c.field-meta.xml
<CustomField>
    <fullName>Count_Related_Won__c</fullName>
    <formula>IF( Opp_Related_Amount_Won__c  &gt; 0, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Related Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>