force-app/main/default/objects/Opps_Related_to_Clinical_Program__c/fields/Impacted_Opp_Calculate__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Opp_Calculate__c</fullName>
    <label>Related Opp Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>