force-app/main/default/objects/Opps_Related_to_Clinical_Program__c/fields/Impacted_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.Account.Name</field>
            <operation>equals</operation>
            <valueField>Opportunity.Account.Name</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Opportunties_Related_to_Programs1</relationshipName>
    <type>Lookup</type>
</CustomField>