force-app/main/default/objects/Opps_Related_to_Clinical_Program__c/fields/New_Opp_Gen_Text__c.field-meta.xml
<CustomField>
    <fullName>New_Opp_Gen_Text__c</fullName>
    <formula>if(Opportunity_Generated_From_Clinical_Prog__c = TRUE,&apos;1&apos;,&apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Opp Gen Text</label>
    <type>Text</type>
</CustomField>