force-app/main/default/objects/Opps_Related_to_Clinical_Program__c/fields/Opp_Related_Amount_Lost__c.field-meta.xml
<CustomField>
    <fullName>Opp_Related_Amount_Lost__c</fullName>
    <label>Opp Related Amount Lost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>