force-app/main/default/objects/Opps_Related_to_Clinical_Program__c/fields/Opportunity_Generated_From_Clinical_Prog__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Generated_From_Clinical_Prog__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Opp Generated From Clinical Program</label>
    <type>Checkbox</type>
</CustomField>