force-app/main/default/objects/Opps_Related_to_Clinical_Program__c/fields/Related_Opp_Open_Amount__c.field-meta.xml
<CustomField>
    <fullName>Related_Opp_Open_Amount__c</fullName>
    <description>NEED TO VALIDATE _ Displays the Amount from the Impacted Opportunity if it is an open Opportunity and if the Opportunity Generated from Clinical Prog box is checked</description>
    <formula>IF( 
AND ( 
Opportunity_Generated_From_Clinical_Prog__c = TRUE, 
Impacted_Opportunity__r.IsWon = FALSE, 
Impacted_Opportunity__r.IsClosed = FALSE 
), 
Impacted_Opportunity__r.Amount, 
0 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Opp Open Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>