force-app/main/default/objects/Opps_Related_to_Clinical_Program__c/fields/Related_Opp_Won_Amount__c.field-meta.xml
<CustomField>
    <fullName>Related_Opp_Won_Amount__c</fullName>
    <description>Displays the Amount from the Impacted Opportunity if it is a closed won Opportunity and if the Opportunity Generated from Clinical Prog box is checked</description>
    <formula>IF(
    AND(
         Impacted_Opportunity__r.IsWon = TRUE, 
         Opportunity_Generated_From_Clinical_Prog__c = TRUE
        ),
    Impacted_Opportunity__r.Amount, 
    0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Opp Won Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>