force-app/main/default/objects/Opps_Related_to_Clinical_Program__c/fields/Related_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity_Amount__c</fullName>
    <formula>Impacted_Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount related to Sales Opportunity</inlineHelpText>
    <label>Related Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>