force-app/main/default/objects/Opps_Related_to_Clinical_Program__c/fields/Related_Opportunitys_Age__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunitys_Age__c</fullName>
    <formula>Impacted_Opportunity__r.Age_of_Opportunity_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Related Opportunity&apos;s Age in Days.</inlineHelpText>
    <label>Related Opportunity&apos;s  Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>