force-app/main/default/objects/Opps_Related_to_Clinical_Program__c/fields/Related_Opportunitys_Stage__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunitys_Stage__c</fullName>
    <description>Used for Reporting</description>
    <formula>TEXT( Impacted_Opportunity__r.StageName )</formula>
    <label>Related Opportuity&apos;s  Stage</label>
    <type>Text</type>
</CustomField>